Update burprunner.bat
permsize